// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickLink should apply custom classes 1`] = `
<Button
  className="quicklink test-class"
  href="#testPath"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  text="testIcon"
  type="button"
  variant="default"
/>
`;

exports[`QuickLink should render a default component 1`] = `
<Button
  className="quicklink"
  href="#testPath"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  text="testIcon"
  type="button"
  variant="default"
/>
`;
